--- a/keras/config.ini
+++ b/keras/config.ini
@@ -1,9 +1,10 @@
 [DEFAULT]
 n_categories = 3
-train_dir = ../input/
+train_dir = ../input/train/
+val_dir = ../input/val/
 checkpoint_path = ./checkpoints/
 img_height = 224
 img_width = 224
-batch_size = 4
+batch_size = 2
 nb_epochs = 10
-model_name = InceptionV3
+model_name = DenseNet121
