--- a/keras/config.ini
+++ b/keras/config.ini
@@ -2,7 +2,9 @@
 n_categories = 1000
 train_dir = ../input/train/
 val_dir = ../input/val/
+test_dir = ../input/test/
 checkpoint_path = ./checkpoints/
+weight_path = ./model_weights/
 img_height = 224
 img_width = 224
 batch_size = 2
