--- a/pytorch/config.ini
+++ b/pytorch/config.ini
@@ -1,12 +1,13 @@
-[DEFAULT]
-n_categories = 1000
+[MODELIB]
+model_name = MobileNetV3
 train_dir = ../input/train/
 val_dir = ../input/val/
 test_dir = ../input/test/
 checkpoint_path = ./checkpoints/
-weight_path = ./model_weights/
 img_height = 224
 img_width = 224
 batch_size = 2
-nb_epochs = 100
-model_name = MobileNetV3
+num_epochs = 100
+learning_rates = 0.05
+ckpt_save_path = ../ckpt/
+tags_csv = nan
