--- a/keras/config.ini
+++ b/keras/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-n_categories = 1000
+model_name = MobileNetV3
 train_dir = ../input/train/
 val_dir = ../input/val/
 test_dir = ../input/test/
@@ -9,4 +9,4 @@ img_height = 224
 img_width = 224
 batch_size = 2
 nb_epochs = 100
-model_name = MobileNetV3
+learning_rates = 0.005
